--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,23 @@
 services:
+  nginx:
+    image: nginx:latest
+    container_name: nginx_webhook_proxy
+    ports:
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./public.pem:/etc/ssl/certs/public.pem
+      - ./private.key:/etc/ssl/private/private.key
   telegram-bot:
     build: .
     environment:
       - BOT_TOKEN=${BOT_TOKEN}
       - WEBHOOK_URL=${WEBHOOK_URL}
+      - CERT_PATH=/etc/ssl/certs/public.pem
+    volumes:
+      - ./public.pem:/etc/ssl/certs/public.pem
     ports:
-      - "8443:8443"
+      - "8080:8080"
+    depends_on:
+      - nginx
     restart: always
