--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,24 @@
-server {
-    listen 8443 ssl;
-    server_name cool.thecovenant.xyz;
+user nginx;
+worker_processes auto;
 
-    ssl_certificate /etc/ssl/certs/public.pem;
-    ssl_certificate_key /etc/ssl/private/private.key;
+events {
+    worker_connections 1024;
+}
 
-    location / {
-        proxy_pass http://telegram-bot:8090;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+http {
+    server {
+        listen 8443 ssl;
+        server_name cool.thecovenant.xyz;
+
+        ssl_certificate /etc/ssl/certs/public.pem;
+        ssl_certificate_key /etc/ssl/private/private.key;
+
+        location / {
+            proxy_pass http://telegram-bot:8090;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
