fix: fixes nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,12 @@ events {
 }
 
 http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    sendfile        on;
+    keepalive_timeout  65;
+
     server {
         listen 8443 ssl;
         server_name cool.thecovenant.xyz;
