--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,5 +6,5 @@ services:
       - WEBHOOK_URL=${WEBHOOK_URL}
       - PORT=${PORT:-8080}
     ports:
-      - "${PORT:-8080}:8080"
+      - "${PORT:-8080}:${PORT:-8080}"
     restart: always
